bug 6018 - adding translate keys

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -480,6 +480,7 @@ STP_IMPORT_INGEST_CONTRACT.FORMAT_NOT_FOUND.KO=Échec de l''import du contrat d'
 STP_IMPORT_INGEST_CONTRACT.UNKNOWN_VALUE.KO=Échec de l''import du contrat d''entrée : au moins un des champs renseignés est inconnu.
 STP_IMPORT_INGEST_CONTRACT.FATAL=Erreur technique lors du processus d''import du contrat d''entrée
 STP_IMPORT_INGEST_CONTRACT.FORMAT_MUST_NOT_BE_EMPTY.KO= Échec de l''import du contrat d''entrée : La liste blanches des formats ne peut pas être vide lorsque tous les formats ne sont pas autorisés
+STP_IMPORT_INGEST_CONTRACT.MANAGEMENTCONTRACT_NOT_FOUND.KO=Échec du processus d''import du contrat d''entrée: Contrat de gestion non trouvé
 
 STP_IMPORT_ACCESS_CONTRACT=Processus d''import du contrat d''accès
 STP_IMPORT_ACCESS_CONTRACT.STARTED=Début du processus d''import du contrat d''accès
@@ -518,6 +519,7 @@ STP_UPDATE_INGEST_CONTRACT.PROFILE_NOT_FOUND.KO=Échec du processus de mise à j
 STP_UPDATE_INGEST_CONTRACT.FATAL=Erreur technique lors du processus de mise à jour du contrat d''entrée
 STP_UPDATE_INGEST_CONTRACT.BAD_REQUEST.KO=Échec du processus de mise à jour du contrat d''entrée : une mauvaise requête a été saisie
 STP_UPDATE_INGEST_CONTRACT.FILEFORMAT_NOT_FOUND.KO=Échec du processus de mise à jour du contrat d''entrée: au moins un identifiant de format est inconnu
+STP_UPDATE_INGEST_CONTRACT.MANAGEMENTCONTRACT_NOT_FOUND.KO=Échec du processus de mise à jour du contrat d''entrée : contrat de gestion non trouvé
 
 STP_UPDATE_ACCESS_CONTRACT=Processus de mise à jour du contrat d''accès
 STP_UPDATE_ACCESS_CONTRACT.STARTED=Début du processus de mise à jour du contrat d''accès
@@ -2478,6 +2480,7 @@ STP_OBJECT_GROUP_GRAPH_COMPUTE.OK=Succès du processus de mise à jour des graph
 STP_OBJECT_GROUP_GRAPH_COMPUTE.KO=Échec du processus de mise à jour des graphes des groupes d''objets
 STP_OBJECT_GROUP_GRAPH_COMPUTE.FATAL=Erreur technique lors du processus de mise à jour des graphes des groupes d''objets
 STP_OBJECT_GROUP_GRAPH_COMPUTE.WARNING=Avertissement lors du processus de mise à jour des graphes des groupes d''objets
+STP_OBJECT_GROUP_GRAPH_COMPUTE.UNKNOWN=État inconnu du processus de mise à jour des graphes des groupes d''objets
 
 OBJECT_GROUP_GRAPH_COMPUTE=Mise à jour des graphes des groupes d''objets
 OBJECT_GROUP_GRAPH_COMPUTE.STARTED=Début de la mise à jour des graphes des groupes d''objets
@@ -3095,6 +3098,13 @@ STP_COMPUTE_INHERITED_RULES_PREPARATION.KO=Échec du processus de préparation d
 STP_COMPUTE_INHERITED_RULES_PREPARATION.WARNING=Avertissement lors du processus de préparation du calcul des règles de gestion applicables
 STP_COMPUTE_INHERITED_RULES_PREPARATION.FATAL=Erreur technique lors du processus de préparation du calcul des règles de gestion applicables
 
+COMPUTE_INHERITED_RULES_PREPARATION=Préparation du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES_PREPARATION.STARTED=Début de la préparation du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES_PREPARATION.OK=Succès de la préparation du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES_PREPARATION.KO=Échec de la préparation du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES_PREPARATION.FATAL=Erreur technique lors de la préparation du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES_PREPARATION.WARNING=Avertissement lors de la préparation du calcul des règles de gestion applicables
+
 STP_COMPUTE_INHERITED_RULES=Processus de calcul des règles de gestion applicables
 STP_COMPUTE_INHERITED_RULES.SATRTED=Début du processus de calcul des règles de gestion applicables
 STP_COMPUTE_INHERITED_RULES.SATRTED.OK=Succès du début du processus de calcul des règles de gestion applicables
@@ -3110,6 +3120,13 @@ STP_COMPUTE_INHERITED_RULES_FINALIZATION.OK=Succès du processus de finalisation
 STP_COMPUTE_INHERITED_RULES_FINALIZATION.KO=Échec du processus de finalisation du calcul des règles de gestion applicables
 STP_COMPUTE_INHERITED_RULES_FINALIZATION.WARNING=Avertisssement lors du processus de finalisation du calcul des règles de gestion applicables
 STP_COMPUTE_INHERITED_RULES_FINALIZATION.FATAL=Erreur technique lors du processus de finalisation du calcul des règles de gestion applicables
+
+COMPUTE_INHERITED_RULES_FINALIZATION=Finalisation du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES_FINALIZATION.STARTED=Début de la finalisation du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES_FINALIZATION.OK=Succès de la finalisation du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES_FINALIZATION.KO=Échec de la finalisation du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES_FINALIZATION.WARNING=Avertisssement de la finalisation du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES_FINALIZATION.FATAL=Erreur technique de la finalisation du calcul des règles de gestion applicables
 
 STP_COMPUTE_INHERITED_RULES_DELETE=Processus de suppression du calcul des règles de gestion applicables
 STP_COMPUTE_INHERITED_RULES_DELETE.STARTED=Début du processus de suppression du calcul des règles de gestion applicables
@@ -3134,6 +3151,13 @@ COMPUTE_INHERITED_RULES_DELETE.OK=Succès suppression du calcul des règles de g
 COMPUTE_INHERITED_RULES_DELETE.KO=Échec suppression du calcul des règles de gestion applicables
 COMPUTE_INHERITED_RULES_DELETE.WARNING=Avertissement lors de suppression du calcul des règles de gestion applicables
 COMPUTE_INHERITED_RULES_DELETE.FATAL=Erreur technique lors de suppression du calcul des règles de gestion applicables
+
+COMPUTE_INHERITED_RULES_PROGENY_IDENTIFIER=Identification des unités archivistiques héritières
+COMPUTE_INHERITED_RULES_PROGENY_IDENTIFIER.STARTED=Début de l''identification des unités archivistiques héritières
+COMPUTE_INHERITED_RULES_PROGENY_IDENTIFIER.OK=Succès de l''identification des unités archivistiques héritières
+COMPUTE_INHERITED_RULES_PROGENY_IDENTIFIER.KO=Erreur lors de l''identification des unités archivistiques héritières
+COMPUTE_INHERITED_RULES_PROGENY_IDENTIFIER.FATAL=Erreur technique lors de l''identification des unités archivistiques héritières
+COMPUTE_INHERITED_RULES_PROGENY_IDENTIFIER.WARNING=Avertissement lors de l''identification des unités archivistiques héritières
 
 STP_INVALIDATE=Invalidation des règles calculées
 STP_INVALIDATE.STARTED=Début de l''invalidation des règles calculées
