add IT test and fix review comment

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -899,8 +899,8 @@ CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST_WRONG_ATTACHMENT.KO=Le bordereau de trans
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST_WRONG_ATTACHMENT_LINK.KO=Le bordereau de transfert procède à un rattachement en utilisant des éléments hors périmètre
 
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.UNAUTHORIZED_ATTACHMENT_BY_CONTRACT.KO=Le rattachement n''a pas été effectué : le contrat d''entrée n''autorise pas les rattachements
-CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.SUBTASK_UNAUTHORIZED_ATTACHMENT_BY_BAD_SP.KO=Le rattachement n''a pas été effectué : le service producteur n''autorise pas le rattachement
-CHECK_DATAOBJECTPACKAGE.SUBTASK_UNAUTHORIZED_ATTACHMENT_BY_BAD_SP.KO=Le rattachement n''a pas été effectué : le service producteur n''autorise pas le rattachement
+CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.SUBTASK_UNAUTHORIZED_ATTACHMENT_BY_BAD_SP.KO=Le rattachement n''a pas été effectué : l''objet rattaché ne déclare pas le même service producteur que le groupe d''objet
+CHECK_DATAOBJECTPACKAGE.SUBTASK_UNAUTHORIZED_ATTACHMENT_BY_BAD_SP.KO=Le rattachement n''a pas été effectué : l''objet rattaché ne déclare pas le même service producteur que le groupe d''objet
 CHECK_DATAOBJECTPACKAGE.UNAUTHORIZED_ATTACHMENT_BY_CONTRACT.KO=Le rattachement n''a pas été effectué : le contrat d''entrée n''autorise pas les rattachements
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.NULL_LINK_PARENT_ID_ATTACHMENT.KO=Le rattachement n''a pas été effectué: le contrat d''entrée ne déclare pas de nœud de rattachement
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.TOO_MANY_FOUND_ATTACHMENT.KO=Le rattachement n''a pas été effectué: l''élément de rattachement n''est pas unique dans le système
