0000 - Add new keys for probative value workflow.

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -2625,117 +2625,61 @@ MASS_UPDATE_UNITS_RULES.KO=Erreur lors de la mise à jour des métadonnées  de 
 MASS_UPDATE_UNITS_RULES.FATAL=Erreur technique lors de la mise à jour des métadonnées  de gestion des unités archivistiques
 MASS_UPDATE_UNITS_RULES.WARNING=Avertissement lors de la mise à jour des métadonnées  de gestion des unités archivistiques
 
-
-EXPORT_PROBATIVE_VALUE=Processus d''export du relevé de valeur probante
-EXPORT_PROBATIVE_VALUE.STARTED=Début du processus d''export du relevé de valeur probante
-EXPORT_PROBATIVE_VALUE.WARNING=Avertissement lors du processus d''export du relevé de valeur probante
-EXPORT_PROBATIVE_VALUE.OK=Succès du processus du processus d''export du relevé de valeur probante
-EXPORT_PROBATIVE_VALUE.KO=Échec du processus du processus d''export du relevé de valeur probante
-EXPORT_PROBATIVE_VALUE.FATAL=Erreur technique lors du processus d''export du relevé de valeur probante
+EXPORT_PROBATIVE_VALUE=Processus de création du relevé de valeur probante
+EXPORT_PROBATIVE_VALUE.STARTED=Début du processus de création du relevé de valeur probante
+EXPORT_PROBATIVE_VALUE.STARTED.OK=Succès du début du processus de création du relevé de valeur probante
+EXPORT_PROBATIVE_VALUE.OK=Succès du processus de création du relevé de valeur probante
+EXPORT_PROBATIVE_VALUE.KO=Échec du processus de création du relevé de valeur probante
+EXPORT_PROBATIVE_VALUE.WARNING=Avertissement lors du processus de création du relevé de valeur probante
+EXPORT_PROBATIVE_VALUE.FATAL=Erreur technique lors du processus de création du relevé de valeur probante
 
 STP_PROBATIVE_VALUE_PREPARE=Processus de préparation du relevé de valeur probante
-STP_PROBATIVE_VALUE_PREPARE.STARTED.OK=Début du processus de préparation du relevé de valeur probante
 STP_PROBATIVE_VALUE_PREPARE.STARTED=Début du processus de préparation du relevé de valeur probante
-STP_PROBATIVE_VALUE_PREPARE.WARNING=Avertissement lors du processus du relevé de valeur probante
+STP_PROBATIVE_VALUE_PREPARE.STARTED.OK=Succès du début du processus de préparation du relevé de valeur probante
 STP_PROBATIVE_VALUE_PREPARE.OK=Succès du processus de préparation du relevé de valeur probante
 STP_PROBATIVE_VALUE_PREPARE.KO=Échec du processus de préparation du relevé de valeur probante
+STP_PROBATIVE_VALUE_PREPARE.WARNING=Avertissement lors du processus de préparation du relevé de valeur probante
 STP_PROBATIVE_VALUE_PREPARE.FATAL=Erreur technique lors du processus de préparation du relevé de valeur probante
 
-PROBATIVE_VALUE_CREATE_DISTRIBUTION_FILE=Création du fichier du fichier de distribution permettant de réaliser le relevé de valeur probante
-PROBATIVE_VALUE_CREATE_DISTRIBUTION_FILE.STARTED=Début de la création du fichier du fichier de distribution permettant de réaliser le relevé de valeur probante
-PROBATIVE_VALUE_CREATE_DISTRIBUTION_FILE.STARTED.OK=Succès du début de la création du fichier du fichier de distribution permettant de réaliser le relevé de valeur probante
-PROBATIVE_VALUE_CREATE_DISTRIBUTION_FILE.OK=Succès de la création du fichier du fichier de distribution permettant de réaliser le relevé de valeur probante
+PROBATIVE_VALUE_CREATE_DISTRIBUTION_FILE=Création du fichier de distribution permettant de réaliser le relevé de valeur probante
+PROBATIVE_VALUE_CREATE_DISTRIBUTION_FILE.STARTED=Début de la création du fichier de distribution permettant de réaliser le relevé de valeur probante
+PROBATIVE_VALUE_CREATE_DISTRIBUTION_FILE.STARTED.OK=Succès du début de la création du fichier de distribution permettant de réaliser le relevé de valeur probante
+PROBATIVE_VALUE_CREATE_DISTRIBUTION_FILE.OK=Succès de la création du fichier de distribution permettant de réaliser le relevé de valeur probante
 PROBATIVE_VALUE_CREATE_DISTRIBUTION_FILE.KO=Échec de la création du fichier de distribution permettant de réaliser le relevé de valeur probante
+PROBATIVE_VALUE_CREATE_DISTRIBUTION_FILE.WARNING=Avertissement lors de la création du fichier de distribution permettant de réaliser le relevé de valeur probante
 PROBATIVE_VALUE_CREATE_DISTRIBUTION_FILE.FATAL=Erreur technique lors de la création du fichier de distribution permettant de réaliser le relevé de valeur probante
 
-EXPORT_PROBATIVE_VALUE_LIST_OBJECT=Création de la liste des objets du relevé de valeur probante
-EXPORT_PROBATIVE_VALUE_LIST_OBJECT.OK=Succès de la création de la liste des objets du relevé de valeur probante
-EXPORT_PROBATIVE_VALUE_LIST_OBJECT.KO=Échec de la création de la liste des objets du relevé de valeur probante
-EXPORT_PROBATIVE_VALUE_OBJECT.FATAL=Une Erreur technique est survenue lors de la création de la liste des objets du relevé de valeur probante
+STP_PROBATIVE_VALUE_ACTION=Processus d''alimentation du relevé de valeur probante
+STP_PROBATIVE_VALUE_ACTION.STARTED=Début du processus d''alimentation du relevé de valeur probante
+STP_PROBATIVE_VALUE_ACTION.STARTED.OK=Succès du début du processus d''alimentation du relevé de valeur probante
+STP_PROBATIVE_VALUE_ACTION.OK=Succès du processus d''alimentation du relevé de valeur probante
+STP_PROBATIVE_VALUE_ACTION.KO=Échec du processus d''alimentation du relevé de valeur probante
+STP_PROBATIVE_VALUE_ACTION.WARNING=Avertissement lors du processus d''alimentation du relevé de valeur probante
+STP_PROBATIVE_VALUE_ACTION.FATAL=Erreur technique lors du processus d''alimentation du relevé de valeur probante
 
-PROBATIVE_VALUE_LIST_OBJECT=Création de la liste des objets du relevé de valeur probante
-PROBATIVE_VALUE_LIST_OBJECT.OK=Succès de la création de la liste des objets du relevé de valeur probante
-PROBATIVE_VALUE_LIST_OBJECT.KO=Échec de la création de la liste des objets du relevé de valeur probante
-PROBATIVE_VALUE_OBJECT.FATAL=Une Erreur technique est survenue lors de la création de la liste des objets du relevé de valeur probante
+PROBATIVE_VALUE_CREATE_PROBATIVE_REPORT_ENTRY=Création d''une entrée dans le relevé de valeur probante
+PROBATIVE_VALUE_CREATE_PROBATIVE_REPORT_ENTRY.STARTED=Début de la création d''une entrée dans le relevé de valeur probante
+PROBATIVE_VALUE_CREATE_PROBATIVE_REPORT_ENTRY.STARTED.OK=Succès du début de la création d''une entrée dans le relevé de valeur probante
+PROBATIVE_VALUE_CREATE_PROBATIVE_REPORT_ENTRY.OK=Succès de la création d''une entrée dans le relevé de valeur probante
+PROBATIVE_VALUE_CREATE_PROBATIVE_REPORT_ENTRY.KO=Échec de la création d''une entrée dans le relevé de valeur probante
+PROBATIVE_VALUE_CREATE_PROBATIVE_REPORT_ENTRY.WARNING=Avertissement lors de la création d''une entrée dans le relevé de valeur probante
+PROBATIVE_VALUE_CREATE_PROBATIVE_REPORT_ENTRY.FATAL=Erreur technique lors de la création d''une entrée dans le relevé de valeur probante
 
-PROBATIVE_VALUE_CHECK_OBJECT_GROUP=Récupération des données dans la base de données
-PROBATIVE_VALUE_CHECK_OBJECT_GROUP.OK=Succès de la récupération des données dans la base de données
-PROBATIVE_VALUE_CHECK_OBJECT_GROUP.STARTED=Début de la récupération des données dans la base de données
-PROBATIVE_VALUE_CHECK_OBJECT_GROUP.WARNING=Avertissement lors la récupération des données dans la base de données
-PROBATIVE_VALUE_CHECK_OBJECT_GROUP.KO=Échec de la récupération des données dans la base de données
-PROBATIVE_VALUE_CHECK_OBJECT_GROUP.FATAL=Erreur technique lors de la récupération des données dans la base de données
+STP_PROBATIVE_VALUE_GENERATE_REPORT=Processus de finalisation de la création du relevé de valeur probante
+STP_PROBATIVE_VALUE_GENERATE_REPORT.STARTED=Début du processus de finalisation de la création du relevé de valeur probante
+STP_PROBATIVE_VALUE_GENERATE_REPORT.STARTED.OK=Succès du début du processus de finalisation de la création du relevé de valeur probante
+STP_PROBATIVE_VALUE_GENERATE_REPORT.OK=Succès du processus de finalisation de la création du relevé de valeur probante
+STP_PROBATIVE_VALUE_GENERATE_REPORT.KO=Échec du processus de finalisation de la  création du relevé de valeur probante
+STP_PROBATIVE_VALUE_GENERATE_REPORT.WARNING=Avertissement lors du processus de finalisation de la création du relevé de valeur probante
+STP_PROBATIVE_VALUE_GENERATE_REPORT.FATAL=Erreur technique lors du processus de finalisation de la création du relevé de valeur probante
 
-STP_PROBATIVE_VALUE_CHECK_OBJECT_GROUP=Processus de récupération des données dans la base de données
-STP_PROBATIVE_VALUE_CHECK_OBJECT_GROUP.OK=Succès du processus de récupération des données dans la base de données
-STP_PROBATIVE_VALUE_CHECK_OBJECT_GROUP.STARTED=Début du processus de récupération des données dans la base de données
-STP_PROBATIVE_VALUE_CHECK_OBJECT_GROUP.STARTED.OK=Succès du début du processus de récupération des données dans la base de données
-STP_PROBATIVE_VALUE_CHECK_OBJECT_GROUP.WARNING=Avertissement lors du processus de récupération des données dans la base de données
-STP_PROBATIVE_VALUE_CHECK_OBJECT_GROUP.KO=Échec du processus de récupération des données dans la base de données
-STP_PROBATIVE_VALUE_CHECK_OBJECT_GROUP.FATAL=Erreur technique lors du processus de récupération des données dans la base de données
-
-PROBATIVE_VALUE_LIST_SECURED_FILES_TO_DOWNLOAD=Préparation de la liste des signatures dans les fichiers sécurisés
-PROBATIVE_VALUE_LIST_SECURED_FILES_TO_DOWNLOAD.OK=Succès de la préparation de la liste des signatures dans les fichiers sécurisés
-PROBATIVE_VALUE_LIST_SECURED_FILES_TO_DOWNLOAD.STARTED=Début de la préparation de la liste des signatures dans les fichiers sécurisés
-PROBATIVE_VALUE_LIST_SECURED_FILES_TO_DOWNLOAD.WARNING=Avertissement lors de la préparation de la liste des signatures dans les fichiers sécurisés
-PROBATIVE_VALUE_LIST_SECURED_FILES_TO_DOWNLOAD.KO=Échec de la préparation de la liste des signatures dans les fichiers sécurisés
-PROBATIVE_VALUE_LIST_SECURED_FILES_TO_DOWNLOAD.FATAL=Erreur technique lors de la préparation de la liste des signatures dans les fichiers sécurisés
-
-STP_PROBATIVE_VALUE_LIST_SECURED_FILES_TO_DOWNLOAD=Processus de préparation de la liste des signatures dans les fichiers sécurisés
-STP_PROBATIVE_VALUE_LIST_SECURED_FILES_TO_DOWNLOAD.OK=Succès du processus de préparation de la liste des signatures dans les fichiers sécurisés
-STP_PROBATIVE_VALUE_LIST_SECURED_FILES_TO_DOWNLOAD.STARTED=Début du processus de préparation de la liste des signatures dans les fichiers sécurisés
-STP_PROBATIVE_VALUE_LIST_SECURED_FILES_TO_DOWNLOAD.WARNING=Avertissement lors du processus de préparation de la liste des signatures dans les fichiers sécurisés
-STP_PROBATIVE_VALUE_LIST_SECURED_FILES_TO_DOWNLOAD.KO=Échec du processus de préparation de la liste des signatures dans les fichiers sécurisés
-STP_PROBATIVE_VALUE_LIST_SECURED_FILES_TO_DOWNLOAD.FATAL=Erreur technique lors du processus de préparation de la liste des signatures dans les fichiers sécurisés
-
-STP_PROBATIVE_VALUE_EXTRACT_ZIP_FILE=Processus d''extraction des signatures à partir des fichiers sécurisés
-STP_PROBATIVE_VALUE_EXTRACT_ZIP_FILE.OK=Succès du processus d''extraction des signatures à partir des fichiers sécurisés
-STP_PROBATIVE_VALUE_EXTRACT_ZIP_FILE.WARNING=Avertissement lors du processus d''extraction des signatures à partir des fichiers sécurisés
-STP_PROBATIVE_VALUE_EXTRACT_ZIP_FILE.STARTED=Début du processus d''extraction des signatures à partir des fichiers sécurisés
-STP_PROBATIVE_VALUE_EXTRACT_ZIP_FILE.STARTED.OK=Succès du début du processus d''extraction des signatures à partir des fichiers sécurisés
-STP_PROBATIVE_VALUE_EXTRACT_ZIP_FILE.KO=Échec du processus d''extraction des signatures à partir des fichiers sécurisés
-STP_PROBATIVE_VALUE_EXTRACT_ZIP_FILE.FATAL=Erreur technique lors du processus d''extraction des signatures à partir des fichiers sécurisés
-
-PROBATIVE_VALUE_EXTRACT_ZIP_FILE=Extraction des signatures à partir des fichiers sécurisés
-PROBATIVE_VALUE_EXTRACT_ZIP_FILE.OK=Succès de l''extraction des signatures à partir des fichiers sécurisés
-PROBATIVE_VALUE_EXTRACT_ZIP_FILE.WARNING=Avertissement lors de l''extraction des signatures à partir des fichiers sécurisés
-PROBATIVE_VALUE_EXTRACT_ZIP_FILE.STARTED=Début de l''extraction des signatures à partir des fichiers sécurisés
-PROBATIVE_VALUE_EXTRACT_ZIP_FILE.KO=Échec de l''extraction des signatures à partir des fichiers sécurisés
-PROBATIVE_VALUE_EXTRACT_ZIP_FILE.FATAL=Erreur technique lors de la préparation de l''extraction des signatures à partir des fichiers sécurisés
-
-PROBATIVE_VALUE_REPORTS.OK=Succès de la création du rapport de relevé de valeur probante
-PROBATIVE_VALUE_REPORTS.KO=Échec de la création du rapport de relevé de valeur probante
-PROBATIVE_VALUE_REPORTS.FATAL =Erreur technique lors de la création du rapport de relevé de valeur probante
-
-STP_PROBATIVE_VALUE_PREPARE_GENERATE_REPORTS=Processus de création du rapport pour chaque unité archivistique ou objet ou groupe d''objets
-STP_PROBATIVE_VALUE_PREPARE_GENERATE_REPORTS.OK=Succès du processus de création du rapport pour chaque unité archivistique ou objet ou groupe d''objets
-STP_PROBATIVE_VALUE_PREPARE_GENERATE_REPORTS.WARNING=Avertissement lors du processus de création du rapport pour chaque unité archivistique ou objet ou groupe d''objets
-STP_PROBATIVE_VALUE_PREPARE_GENERATE_REPORTS.STARTED=Début du processus de création du rapport pour chaque unité archivistique ou objet ou groupe d''objets
-STP_PROBATIVE_VALUE_PREPARE_GENERATE_REPORTS.FATAL=une Erreur technique lors du processus de création du rapport pour chaque unité archivistique ou objet ou groupe d''objets
-
-PROBATIVE_VALUE_PREPARE_GENERATE_REPORTS=Processus de création du rapport pour chaque unité archivistique ou objet ou groupe d''objets
-PROBATIVE_VALUE_PREPARE_GENERATE_REPORTS.OK=Succès du processus de création du rapport pour chaque unité archivistique ou objet ou groupe d''objets
-PROBATIVE_VALUE_PREPARE_GENERATE_REPORTS.WARNING=Avertissement lors du processus de création du rapport pour chaque unité archivistique ou objet ou groupe d''objets
-PROBATIVE_VALUE_PREPARE_GENERATE_REPORTS.STARTED=Début du processus de création du rapport pour chaque unité archivistique ou objet ou groupe d''objets
-PROBATIVE_VALUE_PREPARE_GENERATE_REPORTS.KO=Échec du processus de création du rapport pour chaque unité archivistique ou objet ou groupe d''objets
-PROBATIVE_VALUE_PREPARE_GENERATE_REPORTS.FATAL=une Erreur technique lors du processus de création du rapport pour chaque unité archivistique ou objet ou groupe d''objets
-
-STP_PROBATIVE_VALUE_CHECK_MERKLE_TREE=Processus de vérification de l''arbre de MERKLE
-STP_PROBATIVE_VALUE_CHECK_MERKLE_TREE.STARTED=Début du processus de vérification de l''arbre de MERKLE
-STP_PROBATIVE_VALUE_CHECK_MERKLE_TREE.STARTED.OK=Succès du processus de vérification de l''arbre de MERKLE
-STP_PROBATIVE_VALUE_CHECK_MERKLE_TREE.OK=Succès du processus de vérification de l''arbre de MERKLE
-STP_PROBATIVE_VALUE_CHECK_MERKLE_TREE.WARNING=Avertissement lors du processus de vérification de l''arbre de MERKLE
-STP_PROBATIVE_VALUE_CHECK_MERKLE_TREE.KO=Échec du processus de vérification de l''arbre de MERKLE
-STP_PROBATIVE_VALUE_CHECK_MERKLE_TREE.FATAL=Erreur technique lors du processus de vérification de l''arbre de MERKLE
-
-PROBATIVE_VALUE_CHECK_MERKLE_TREE=Vérification de l''arbre de MERKLE
-PROBATIVE_VALUE_CHECK_MERKLE_TREE.STARTED=Début de la vérification de l''arbre de MERKLE
-PROBATIVE_VALUE_CHECK_MERKLE_TREE.OK=Succès de la vérification de l''arbre de MERKLE
-PROBATIVE_VALUE_CHECK_MERKLE_TREE.WARNING=Avertissement lors de la vérification de l''arbre de MERKLE
-PROBATIVE_VALUE_CHECK_MERKLE_TREE.KO=Échec de la vérification de l''arbre de MERKLE
-PROBATIVE_VALUE_CHECK_MERKLE_TREE.FATAL=Erreur technique lors de la vérification de l''arbre de MERKLE
-
-
-
+PROBATIVE_VALUE_CREATE_REPORT=Finalisation de la création du relevé de valeur probante
+PROBATIVE_VALUE_CREATE_REPORT.STARTED=Début de la finalisation de la création du relevé de valeur probante
+PROBATIVE_VALUE_CREATE_REPORT.STARTED.OK=Succès du début de la finalisation de la création du relevé de valeur probante
+PROBATIVE_VALUE_CREATE_REPORT.OK=Succès de la finalisation de la création du relevé de valeur probante
+PROBATIVE_VALUE_CREATE_REPORT.KO=Échec de la finalisation de la création du relevé de valeur probante
+PROBATIVE_VALUE_CREATE_REPORT.WARNING=Avertissement lors de la finalisation de la création du relevé de valeur probante
+PROBATIVE_VALUE_CREATE_REPORT.FATAL=Erreur technique lors de la finalisation de la création du relevé de valeur probante
 
 ##########################################################
 # Analyse élimination ( modifié le 20/09/2018)
