--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -3276,3 +3276,10 @@ STP_INVALIDATE.FATAL=Erreur technique lors de l''invalidation des règles calcul
 
 STP_PREPARATION.OK=Succès du processus de lancement de la préparation du traitement de préservation
 
+STP_BACKUP_ONTOLOGY=Processus de sauvegarde du référentiel des ontologies
+STP_BACKUP_ONTOLOGY.STARTED=Début du processus de sauvegarde du référentiel des ontologies
+STP_BACKUP_ONTOLOGY.STARTED.OK=Succès du début du processus de sauvegarde du référentiel des ontologies
+STP_BACKUP_ONTOLOGY.OK=Succès du processus de sauvegarde du référentiel des ontologies
+STP_BACKUP_ONTOLOGY.KO=Échec du processus de sauvegarde du référentiel des ontologies
+STP_BACKUP_ONTOLOGY.WARNING=Avertissement lors du processus de sauvegarde du référentiel des ontologies
+STP_BACKUP_ONTOLOGY.FATAL=Erreur technique lors du processus de sauvegarde du référentiel des ontologies
