6086 - fixing Elimination case for unpurging units.

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -2970,6 +2970,9 @@ STP_TRANSFER_REPLY_DELETE_UNIT.KO=Échec du processus de purge des unités archi
 STP_TRANSFER_REPLY_DELETE_UNIT.FATAL=Erreur technique lors du processus de purge des unités archivistiques
 STP_TRANSFER_REPLY_DELETE_UNIT.WARNING=Avertissement lors du processus de purge des unités archivistiques
 
+LFC.UNIT_DELETION_ABORT=Échec du processus de purge de l''unité archivistique
+LFC.UNIT_DELETION_ABORT.OK=Échec du processus de purge de l''unité archivistique
+
 TRANSFER_REPLY_DELETE_UNIT=Purge des unités archivistiques
 TRANSFER_REPLY_DELETE_UNIT.STARTED=Début de la purge des unités archivistiques
 TRANSFER_REPLY_DELETE_UNIT.STARTED.OK=Succès du début de la purge des unités archivistiques
