bug 6044 attachement with bas sp CP

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -831,6 +831,8 @@ CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST_DATAOBJECT_VERSION.OK=Succès de la véri
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST_DATAOBJECT_VERSION.KO=Échec de la vérification des usages des objets
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST_DATAOBJECT_VERSION.FATAL=Erreur technique lors de la vérification des usages des objets
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST_DATAOBJECT_VERSION.WARNING=Avertissement lors de la vérification des usages des objets
+CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.SUBTASK_UNAUTHORIZED_ATTACHMENT_BY_BAD_SP.KO=Le rattachement n''a pas été effectué : l''objet rattaché ne déclare pas le même service producteur que le groupe d''objet
+CHECK_DATAOBJECTPACKAGE.SUBTASK_UNAUTHORIZED_ATTACHMENT_BY_BAD_SP.KO=Le rattachement n''a pas été effectué : l''objet rattaché ne déclare pas le même service producteur que le groupe d''objet
 
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST_OBJECTNUMBER=Vérification du nombre d''objets
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST_OBJECTNUMBER.STARTED=Début de la vérification du nombre d''objets
