Bug 6007 Check threshold of rule nocturne batch

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -2561,6 +2561,12 @@ CHECK_DISTRIBUTION_THRESHOLD.KO=Échec de la vérification des seuils de limitat
 CHECK_DISTRIBUTION_THRESHOLD.FATAL=Erreur technique lors de la vérification des seuils de limitation de traitement des unités archivistiques
 CHECK_DISTRIBUTION_THRESHOLD.WARNING=Avertissement lors de la vérification des seuils de limitation de traitement des unités archivistiques
 
+COMPUTED_INHERITED_RULES_CHECK_DISTRIBUTION_THRESHOLD=Vérification des seuils de limitation de traitement des unités archivistiques
+COMPUTED_INHERITED_RULES_CHECK_DISTRIBUTION_THRESHOLD.OK=Succès de la vérification des seuils de limitation de traitement des unités archivistiques
+COMPUTED_INHERITED_RULES_CHECK_DISTRIBUTION_THRESHOLD.KO=Échec de la vérification des seuils de limitation de traitement des unités archivistiques
+COMPUTED_INHERITED_RULES_CHECK_DISTRIBUTION_THRESHOLD.FATAL=Erreur technique lors de la vérification des seuils de limitation de traitement des unités archivistiques
+COMPUTED_INHERITED_RULES_CHECK_DISTRIBUTION_THRESHOLD.WARNING=Avertissement lors de la vérification des seuils de limitation de traitement des unités archivistiques
+
 PREPARE_STORAGE_STRATEGIES=Récupération de la liste des stratégies de stockage
 PREPARE_STORAGE_STRATEGIES.OK=Succès de la récupération de la liste des stratégies de stockage
 PREPARE_STORAGE_STRATEGIES.KO=Échec de la récupération de la liste des stratégies de stockage
