Item 6119 : Ingest cleanup workflow

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -2928,7 +2928,7 @@ TRANSFER_REPLY.STARTED=Début de l''acquittement du transfert
 TRANSFER_REPLY.WARNING=Avertissement lors de l''acquittement du transfert
 TRANSFER_REPLY.OK=Succès de l''acquittement du transfert
 TRANSFER_REPLY.KO=Échec de l''acquittement du transfert
-TRANSFER_REPLY.FATAL=Erreur technique lors de l''acquittement du transfertœ
+TRANSFER_REPLY.FATAL=Erreur technique lors de l''acquittement du transfert
 
 
 STP_TRANSFER_REPLY_PREPARATION=Processus de prépération de l''acquittement du transfert
@@ -3288,3 +3288,109 @@ STP_BACKUP_ONTOLOGY.OK=Succès du processus de sauvegarde du référentiel des o
 STP_BACKUP_ONTOLOGY.KO=Échec du processus de sauvegarde du référentiel des ontologies
 STP_BACKUP_ONTOLOGY.WARNING=Avertissement lors du processus de sauvegarde du référentiel des ontologies
 STP_BACKUP_ONTOLOGY.FATAL=Erreur technique lors du processus de sauvegarde du référentiel des ontologies
+
+
+
+STP_INGEST_CLEANUP_PREPARATION=Processus de nettoyage d''ingest corrompu
+STP_INGEST_CLEANUP_PREPARATION.STARTED=Début du processus de nettoyage d''ingest corrompu
+STP_INGEST_CLEANUP_PREPARATION.STARTED.OK=Succès du début du processus de nettoyage d''ingest corrompu
+STP_INGEST_CLEANUP_PREPARATION.OK=Succès du processus de nettoyage d''ingest corrompu
+STP_INGEST_CLEANUP_PREPARATION.WARNING=Avertissement lors du processus de nettoyage d''ingest corrompu
+STP_INGEST_CLEANUP_PREPARATION.KO=Échec du processus de nettoyage d''ingest corrompu
+STP_INGEST_CLEANUP_PREPARATION.FATAL=Erreur technique lors du processus de nettoyage d''ingest corrompu
+
+INGEST_CLEANUP_REQUEST_VALIDATION=Validation de la requête
+INGEST_CLEANUP_REQUEST_VALIDATION.STARTED=Début de la validation de la requête
+INGEST_CLEANUP_REQUEST_VALIDATION.OK=Succès de la validation de la requête
+INGEST_CLEANUP_REQUEST_VALIDATION.KO=Échec de la validation de la requête
+INGEST_CLEANUP_REQUEST_VALIDATION.FATAL=Erreur technique lors de la validation de la requête
+INGEST_CLEANUP_REQUEST_VALIDATION.WARNING=Avertissement lors de la validation de la requête
+
+INGEST_CLEANUP_ELIGIBILITY_VALIDATION=Validation de l''opération d''ingest corrompue
+INGEST_CLEANUP_ELIGIBILITY_VALIDATION.STARTED=Début de la validation de l''opération d''ingest corrompue
+INGEST_CLEANUP_ELIGIBILITY_VALIDATION.OK=Succès de la validation de l''opération d''ingest corrompue
+INGEST_CLEANUP_ELIGIBILITY_VALIDATION.KO=Échec de la validation de l''opération d''ingest corrompue
+INGEST_CLEANUP_ELIGIBILITY_VALIDATION.FATAL=Erreur technique lors de la validation de l''opération d''ingest corrompue
+INGEST_CLEANUP_ELIGIBILITY_VALIDATION.WARNING=Avertissement lors de la validation de l''opération d''ingest corrompue
+
+INGEST_CLEANUP_PREPARATION=Préparation du processus de nettoyage
+INGEST_CLEANUP_PREPARATION.STARTED=Début de la préparation du processus de nettoyage
+INGEST_CLEANUP_PREPARATION.OK=Succès de la préparation du processus de nettoyage
+INGEST_CLEANUP_PREPARATION.KO=Échec de la préparation du processus de nettoyage
+INGEST_CLEANUP_PREPARATION.FATAL=Erreur technique lors de la préparation du processus de nettoyage
+INGEST_CLEANUP_PREPARATION.WARNING=Avertissement lors de la préparation du processus de nettoyage
+
+
+STP_INGEST_CLEANUP_DELETE_UNIT=Processus de purge des unités archivistiques
+STP_INGEST_CLEANUP_DELETE_UNIT.STARTED=Début du processus de purge des unités archivistiques
+STP_INGEST_CLEANUP_DELETE_UNIT.STARTED.OK=Succès du début du processus de purge des unités archivistiques
+STP_INGEST_CLEANUP_DELETE_UNIT.OK=Succès du processus de purge des unités archivistiques
+STP_INGEST_CLEANUP_DELETE_UNIT.KO=Échec du processus de purge des unités archivistiques
+STP_INGEST_CLEANUP_DELETE_UNIT.FATAL=Erreur technique lors du processus de purge des unités archivistiques
+STP_INGEST_CLEANUP_DELETE_UNIT.WARNING=Avertissement lors du processus de purge des unités archivistiques
+
+INGEST_CLEANUP_DELETE_UNIT=Purge des unités archivistiques
+INGEST_CLEANUP_DELETE_UNIT.STARTED=Début de la purge des unités archivistiques
+INGEST_CLEANUP_DELETE_UNIT.STARTED.OK=Succès du début de la purge des unités archivistiques
+INGEST_CLEANUP_DELETE_UNIT.OK=Succès de la purge des unités archivistiques
+INGEST_CLEANUP_DELETE_UNIT.KO=Échec de la purge des unités archivistiques
+INGEST_CLEANUP_DELETE_UNIT.FATAL=Erreur technique lors de la purge des unités archivistiques
+INGEST_CLEANUP_DELETE_UNIT.WARNING=Avertissement lors de la purge des unités archivistiques
+
+
+STP_INGEST_CLEANUP_DELETE_OBJECT_GROUP=Processus de purge des groupes d''objets techniques
+STP_INGEST_CLEANUP_DELETE_OBJECT_GROUP.STARTED=Début du processus de purge des groupes d''objets techniques
+STP_INGEST_CLEANUP_DELETE_OBJECT_GROUP.STARTED.OK=Succès du début du processus de purge des groupes d''objets techniques
+STP_INGEST_CLEANUP_DELETE_OBJECT_GROUP.OK=Succès du processus de purge des groupes d''objets techniques
+STP_INGEST_CLEANUP_DELETE_OBJECT_GROUP.KO=Échec du processus de purge des groupes d''objets techniques
+STP_INGEST_CLEANUP_DELETE_OBJECT_GROUP.FATAL=Erreur technique lors du processus de purge des groupes d''objets techniques
+STP_INGEST_CLEANUP_DELETE_OBJECT_GROUP.WARNING=Avertissement lors du processus de purge des groupes d''objets techniques
+
+INGEST_CLEANUP_DELETE_OBJECT_GROUP=Purge des groupes d''objets techniques
+INGEST_CLEANUP_DELETE_OBJECT_GROUP.STARTED=Début de la purge des groupes d''objets techniques
+INGEST_CLEANUP_DELETE_OBJECT_GROUP.STARTED.OK=Succès du début de la purge des groupes d''objets techniques
+INGEST_CLEANUP_DELETE_OBJECT_GROUP.OK=Succès de la purge des groupes d''objets techniques
+INGEST_CLEANUP_DELETE_OBJECT_GROUP.KO=Échec de la purge des groupes d''objets techniques
+INGEST_CLEANUP_DELETE_OBJECT_GROUP.FATAL=Erreur technique lors de la purge des groupes d''objets techniques
+INGEST_CLEANUP_DELETE_OBJECT_GROUP.WARNING=Avertissement lors de la purge des groupes d''objets techniques
+
+
+STP_INGEST_CLEANUP_ACCESSION_REGISTER_UPDATE=Processus de mise à jour du Registre des Fonds suite au nettoyage d''ingest corrompu
+STP_INGEST_CLEANUP_ACCESSION_REGISTER_UPDATE.STARTED=Début du processus de mise à jour du Registre des Fonds suite au nettoyage d''ingest corrompu
+STP_INGEST_CLEANUP_ACCESSION_REGISTER_UPDATE.STARTED.OK=Succès du début du processus de mise à jour du Registre des Fonds suite au nettoyage d''ingest corrompu
+STP_INGEST_CLEANUP_ACCESSION_REGISTER_UPDATE.OK=Succès du processus de mise à jour du Registre des Fonds suite au nettoyage d''ingest corrompu
+STP_INGEST_CLEANUP_ACCESSION_REGISTER_UPDATE.KO=Échec du processus de mise à jour du Registre des Fonds suite au nettoyage d''ingest corrompu
+STP_INGEST_CLEANUP_ACCESSION_REGISTER_UPDATE.FATAL=Erreur technique lors du processus de mise à jour du Registre des Fonds suite au nettoyage d''ingest corrompu
+STP_INGEST_CLEANUP_ACCESSION_REGISTER_UPDATE.WARNING=Avertissement lors du processus de mise à jour du Registre des Fonds suite au nettoyage d''ingest corrompu
+
+INGEST_CLEANUP_ACCESSION_REGISTER_UPDATE=Mise à jour du Registre des Fonds suite au nettoyage d''ingest corrompu
+INGEST_CLEANUP_ACCESSION_REGISTER_UPDATE.STARTED=Début de la mise à jour du Registre des Fonds suite au nettoyage d''ingest corrompu
+INGEST_CLEANUP_ACCESSION_REGISTER_UPDATE.STARTED.OK=Succès du début de la mise à jour du Registre des Fonds suite au nettoyage d''ingest corrompu
+INGEST_CLEANUP_ACCESSION_REGISTER_UPDATE.OK=Succès de la mise à jour du Registre des Fonds suite au nettoyage d''ingest corrompu
+INGEST_CLEANUP_ACCESSION_REGISTER_UPDATE.KO=Échec de la mise à jour du Registre des Fonds suite au nettoyage d''ingest corrompu
+INGEST_CLEANUP_ACCESSION_REGISTER_UPDATE.FATAL=Erreur technique lors de la mise à jour du Registre des Fonds suite au nettoyage d''ingest corrompu
+INGEST_CLEANUP_ACCESSION_REGISTER_UPDATE.WARNING=Avertissement lors de la mise à jour du Registre des Fonds suite au nettoyage d''ingest corrompu
+
+
+STP_INGEST_CLEANUP_FINALIZATION=Processus de finalisation du nettoyage d''ingest corrompu
+STP_INGEST_CLEANUP_FINALIZATION.STARTED=Début du processus de finalisation du nettoyage d''ingest corrompu
+STP_INGEST_CLEANUP_FINALIZATION.STARTED.OK=Succès du début du processus de finalisation du nettoyage d''ingest corrompu
+STP_INGEST_CLEANUP_FINALIZATION.OK=Succès du processus de finalisation du nettoyage d''ingest corrompu
+STP_INGEST_CLEANUP_FINALIZATION.KO=Échec du processus de finalisation du nettoyage d''ingest corrompu
+STP_INGEST_CLEANUP_FINALIZATION.FATAL=Erreur technique lors du processus de finalisation du nettoyage d''ingest corrompu
+STP_INGEST_CLEANUP_FINALIZATION.WARNING=Avertissement lors du processus de finalisation du nettoyage d''ingest corrompu
+
+INGEST_CLEANUP_FINALIZATION=Finalisation du nettoyage d''ingest corrompu
+INGEST_CLEANUP_FINALIZATION.STARTED=Début de la finalisation du nettoyage d''ingest corrompu
+INGEST_CLEANUP_FINALIZATION.STARTED.OK=Succès du début de la finalisation du nettoyage d''ingest corrompu
+INGEST_CLEANUP_FINALIZATION.OK=Succès de la finalisation du nettoyage d''ingest corrompu
+INGEST_CLEANUP_FINALIZATION.KO=Échec de la finalisation du nettoyage d''ingest corrompu
+INGEST_CLEANUP_FINALIZATION.FATAL=Erreur technique lors de la finalisation du nettoyage d''ingest corrompu
+INGEST_CLEANUP_FINALIZATION.WARNING=Avertissement lors de la finalisation du nettoyage d''ingest corrompu
+
+INGEST_CLEANUP=Nettoyage d''ingest corrompu
+INGEST_CLEANUP.STARTED=Début du nettoyage d''ingest corrompu
+INGEST_CLEANUP.WARNING=Avertissement lors du nettoyage d''ingest corrompu
+INGEST_CLEANUP.OK=Succès du nettoyage d''ingest corrompu
+INGEST_CLEANUP.KO=Échec du nettoyage d''ingest corrompu
+INGEST_CLEANUP.FATAL=Erreur technique lors du nettoyage d''ingest corrompu
